# fisio

./: db.sqlite3  manage.py  pyproject.toml
fisio/: asgi.py  settings.py  urls.py  wsgi.py
schedule/: admin.py  models.py  serializers.py  views.py
schedule/migrations/: 0001_initial.py
